Correciones en Python

--- a/HFC/Python/apuntes/HFC04_09_2024.md
+++ b/HFC/Python/apuntes/HFC04_09_2024.md
@@ -108,7 +108,7 @@ Namespaces are one honking great idea -- let's do more of those!
 
 **Ejecutar un módulo**: `python(3) -m http.server`
 
-**Ejecutar un comando**: `python(3) -c 'print(bin(123))'
+**Ejecutar un comando**: `python(3) -c 'print(bin(123))`
 
 **Ejecutar un script**: `python(3) test.py`
 
