--- a/HFC/Python/apuntes/HFC09_09_2024.md
+++ b/HFC/Python/apuntes/HFC09_09_2024.md
@@ -159,11 +159,21 @@ pip --help
 
 En *Python*, cada archivo tiene un atributo especial llamado `__name__`.
 
-Cuando un archivo se ejecuta directamente, este atributo es asignado como `"__main__"`
+> Cuando un archivo se ejecuta directamente, este atributo es asignado como `"__main__"`
 
-Si el archivo es importado como módulo, el nombre será el nombre del archivo sin la extensión `.py`.
+> Si el archivo es importado como módulo, el nombre será el nombre del archivo sin la extensión `.py`.
 
 Por ejemplo si el archivo es `Alumno.py`, entonces `__name__ = Alumno`
+
+Esto es útil cuando queremos designar una función "principal" solo se ejecute cuando ejecutemos directamente el archivo.
+
+```python
+def main():
+	print("Esta es la función principal del archivo")
+
+if(__name__ == "__main__"):
+	main()
+```
 
 # Enlaces
 
