Lenguajes: Expresiones Let

--- a/LenguajesProgramacion/apuntes/LP05_09_2024.md
+++ b/LenguajesProgramacion/apuntes/LP05_09_2024.md
@@ -1,7 +1,58 @@
 [<- Índice](../LenguajesProgramacion.md)
 # Sintaxis del cálculo $\lambda$
+## Modelo computacional
 
-## Terminos $\lambda$
+Por ejemplo el **Calculo $\lambda$** y la **Máquina de Turing**:
+
+### Máquinas de Turing
+
+- Cinta con celdas (estados)
+- Cabeza lectora
+- Usa una función de transición: Realiza acciones a partir del estado.
+
+### C
+
+**C** es un lenguaje imperativo basado en el modelo de cómputo de la **Máquina de Turing**.
+
+- **Variables**: Almacenan valores, lo cual representa el estado.
+- **Estructuras de control** 
+
+## Cálculo $\lambda$
+
+El cálculo $\lambda$ es un sistema lógico, y como todo sistema lógico tiene:
+
+- **Sintaxis**
+- **Semántica**
+- **Reglas de inferencia** (Teoría de la prueba)
+
+### Sintaxis
+
+#### - Términos $\lambda$
+
+- Variables
+- Abstracciones $\lambda$ (funciones)
+- Aplicaciones de función
+
+`<Expr>` $:=$ `<Var>`
+		| ($\lambda$ `<Var>` $\cdot$ `<Expr>`)
+		| `(<Expr>)`
+
+##### - Variables
+
+Son identificadores, entonces pueden ser letras, cadenas, etc
+
+##### - Funciones
+
+> $\lambda$ `x` $\cdot$ `x`
+
+Lo que está antes del punto se denomina ==encabezado== y lo que esta despues ==cuerpo==.
+
+##### - Aplicaciones de funciones
+
+> `((`$\lambda$`x`$\cdot$`x) y)`
+
+- Parametros formales: Vendría siendo la función que se va a aplicar
+- Parametros reales: Serían los **argumentos** que se van a aplicar de la función.
 
 ### Alcance
 
