--- a/LenguajesProgramacion/apuntes/LP23_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP23_08_2024.md
@@ -1,9 +1,15 @@
 [<- Índice](../LenguajesProgramacion.md)
 # Semántica estática
 
-> Esta semántica verifica que el programa tenga sentido.
+> En *Lenguajes de Programación*, la ==semántica estática== se refiere a la parte del significado de los programas que podemos determinar sin necesidad de ejecutar el programa.
 
-Primero recalcemos que la semántica dinámica se da en tiempo de ejecución, mientras que la semántica estática se da en tiempo de compilación.
+También recalcemos que la semántica dinámica se da en tiempo de ejecución, mientras que la semántica estática se da en ==tiempo de compilación==.
+
+Por ejemplo, considerando la declaración de una variable en *C*:
+
+> `int edad = 30`
+
+La palabra reservada `int` indica que la variable `edad` debe ser un número entero, sin ncesidad de ejcutar el programa.
 
 Por tanto, la semántica estática se encarga de cosas como:
 
@@ -13,6 +19,23 @@ Por tanto, la semántica estática se encarga de cosas como:
 
 - **Reglas de visibilidad** : Decidir que partes del código pueden acceder a que datos
 
+Este área de la semántica es importante porque ayuda a corregir tu programa antes de que lo ejecutes, asegurando que las partes del código ==tengan sentido== en el contexto del lenguaje de programación que estas usando.
+
+## Un sistema de Tipos para MiniLisp
+
+Un ==sistema de tipos== en la teoría de lenguajes de programación es un sistema formal que asigna un tipo a las construcciones sintácticas del lenguaje, como variables, expresiones o funciones, con el objetivo de reducir la posibilidad de errores en el comportamiento del programa.
+
+El sistema de tipos utiliza reglas formales para determinar si una expresión o un programa es válido bajo las restricciones de tipos especificadas.
+
+> Un **sistema de tipos** puede ser definido como una tripleta $(T, \Gamma,\vdash)$ donde:
+>
+> - $T$ es un conjunto de **tipos**
+>
+> - $\Gamma$ es un **contexto* de tipificado** o **entorno**, que es un mapeo de identificadores a tipos
+>
+> - $\vdash$ es una **relación de derivación de tipos**, que es una relación entre un contexto $\Gamma$, una expresión $e$ y un tipo $\tau \in T$.
+>
+> Esto se denota como $\Gamma \vdash e\; : \; \tau$ , que se lee como "bajo el contexto $\Gamma$, la expresión $e$ tiene el tipo $\tau$"
 
 # Enlaces
 
