--- a/LenguajesProgramacion/apuntes/LP29_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP29_08_2024.md
@@ -1,20 +1,32 @@
 [<- Índice](../LenguajesProgramacion.md)
-# Expresiones let
+# Expresiones `let`
 
-- Expresiones básicas (Tipos)
-- Variables
-	- Conocer su valor
-	- Pueden ser mutables
-	- Tipos para verificar
-	- Alcance
+## Introducción
+
+### Variables
+
+- Poseen un valor
+- Pueden ser mutables
+- Poseen un tipo
+- Poseen alcance
 
 #### Variables locales y globales
 
 Una variable global es alcanzable en todo el programa, mientras que una local solo es alcanzable en cierta porción del programa
 
-#### Ejemplos de let
+#### Más definiciones
 
-##### Haskell
+**Alcance**: Región del programa donde los identificadores obtienen su valor.
+
+**Variable de ligado**: La instancia de una variable que da a esta su valor.
+
+**Variable ligada**: Son aquellas que dependen de las ligadas.
+
+**Variables libres**: Son aquellas que no dependen de ninguna variable de ligado.
+
+### Ejemplos de let en lenguajes de programación
+
+#### Haskell
 
 > `let a=2 in a+a`
 
@@ -25,25 +37,87 @@ Este tipo de expresiones `let` son muy típicas de los lenguajes funcionales, pu
 
 Esto evita los famosos "efectos secundarios" y de esta forma aseguramos en la programación funcional que dicha función regresa siempre el mismo valor.
 
-##### Lisp
+#### Lisp
 
 > `(let ([a 2], [b 3]) (+ a b))`
 
-#### Evaluación glotona o perezosa (lazy)
+### Evaluación glotona o perezosa (lazy)
 
-La evaluación *glotona* realiza evaluaciones antes de pasarselas a otras funciones o procesos.
+La evaluación *glotona* o *ansiosa* realiza evaluaciones antes de pasarselas a otras funciones o procesos. Es decir, evalua el valor asociado a cada variable y luego sustituye.
 
-Por otra parte, la evaluación *perezosa* solo realiza las evaluaciones cuando son estrictamente necesarias.
+Por otra parte, la evaluación *perezosa* solo realiza las evaluaciones cuando son estrictamente necesarias. Es decir, realiza todas las sustituciones necesarias al principio y despues evalua la expresión, **de ser necesario**.
 
-## Definiciones importantes
+## Definición de Let
 
-**Alcance**: Región del programa donde los identificadores obtienen su valor.
+Las expresiones `let` son una construcción común en muchos lenguajes de programación que permite la creación de ==variables locales== con un ==alcance== limitado.
 
-**Variable de ligado**: La instancia de una variable que da a esta su valor.
+Facilitan el entendimiento y la implementación de conceptos importantes como el alcance de las variables, evaluación de expresiones y optimización del código.
 
-**Variable ligada**: Son aquellas que dependen de las ligadas.
+### Funcionamiento de las expresiones `let`
 
-**Variables libres**: Son aquellas que no dependen de ninguna variable de ligado.
+Permite definir variables locales a un bloque de código. Estas variables pueden ser utilizadas dentro del cuerpo de la expresión `let`, pero no fuera de ella.
+
+Intuitivamente (y no formalmente), una expresión `let` consta de 3 elementos básicos:
+
+- **Identificadores**: El nombre de la variable a declarar
+- **Valores**: El valor de la variable que se está declarando
+- **Cuerpo**: El cuerpo donde serán usadas dichas declaraciones
+
+Las expresiones `let` son muy útiles porque:
+
+- Permiten dividir cálculos complejos en pasos más pequeños y manejables, facilitando la legibilidad y el mantenimiento del código.
+- Las optimizaciones en los compiladores pueden aprovechar las expresiones `let` para mejorar el rendimiento del código.
+
+## Sintaxis concreta
+
+**Sintaxis libre de contexto**: (let (`<Id>` `<Expr>`) `<Expr>`):
+
+Donde:
+- `<Id>` representa variables
+- `<Expr>` representa cualquier ptra construcción del lenguaje
+
+### Ejemplos
+
+- `(let (a 2) (+ a a))`
+- `(let (a #t) (let (b (not a) (not b))))`
+
+## Sintaxis abstracta
+
+Para definir la sintaxis abstracta de un *Let* primero debemos definir a los identificadores (variables):
+
+- $Id(s)$ es un $ASA$ si $s \; : \; String$
+$$
+\begin{prooftree}
+\AxiomC{s : \texttt{String}}
+\UnaryInfC{\textit{Id}(s)}
+\end{prooftree}
+$$
+
+Recordemos que con *String* nos referimos a la clase *String* de nuestro lenguaje anfitrión (*Haskell*).
+
+Ahora si podemos definir como es debido la sintaxis abstracta de un *Let*:
+
+- $Let(i,v,c)$ es un $ASA$ si $i \; : \; String$, $v \; ASA$ y $c \; ASA$
+$$
+\begin{prooftree}
+\AxiomC{i : \texttt{String}}
+\AxiomC{v \texttt{ASA}}
+\AxiomC{c \texttt{ASA}}
+\TrinaryInfC{\textit{Let}(i,v,c) \texttt{ASA}}
+\end{prooftree}
+$$
+
+## Semántica Dinámica
+
+Analizando intuitivamente la expresión:
+
+> `(let (a 2) (+ a a))`
+
+- La expresión que guía la evaluación es el cuerpo `(+ a a)`
+- Dado que `a` se declaró con el valor de 2, debemos remplazar este identificador con un 2, entonces quedaría `(+ 2 2)`
+- Evaluamos y obtenemos 4 como resultado
+
+Este fue un caso sencillo, pero se hace explícita la necesidad de contar con un ==algoritmo de sustitución==.
 
 # Enlaces
 
