--- a/LenguajesProgramacion/apuntes/LP30_08_2024.md
+++ b/LenguajesProgramacion/apuntes/LP30_08_2024.md
@@ -1,19 +1,67 @@
 [<- Índice](../LenguajesProgramacion.md)
-# Expresiones Let
+# Sustitución
 
-Recordemos que un algoritmo de sustitución puede representarse como una función `sustituttion` que defina las reglas de sustitución para los distintos ASAs de la sintaxis abstracta. Cabe recalcar que dicha función recibe 3 parametros:
+Recordemos que un algoritmo de sustitución puede representarse como una función `sustitution` que defina las reglas de sustitución para los distintos *ASA* de la sintaxis abstracta.
 
-> $sustitution : (ASA \times Id(i) \times ASA) \rightarrow ASA$
+Cabe recalcar que dicha función recibe 3 parametros:
 
-Ademas recordemos que solo podemos sustituir variables libres.
+> $sustitution : (ASA \times i:\texttt{String} \times ASA) \rightarrow ASA$
 
-### ¿Cual es la complejidad de un algoritmo de sustitución?
+Ademas recordemos que solo podemos sustituir variables ligadas.
 
-La complejidad de un algoritmo de sustitución es $O(n^2)$
+> Podemos definir la sustitución formalmente como la operación de tomar una expresión y remplazar todas las ocurrencias de una variable en esa expresión por otra expresión o valor.
+
+Recordemos que en notación matemática, la sustitución de la variable $x$ por la expresión $e$ en una expresión $f$ se denota como $f[x := e]$.
+
+**¿Cual es la complejidad de un algoritmo de sustitución?**
+
+> La complejidad de un algoritmo de sustitución es $O(n^2)$
+
+## Algoritmo de sustitución para *MiniLisp*
+
+#### Identificadores:
+La sustitución en identificadores dependera del identificador que captura la etiqueta *Id*.
+
+$Id(i)[x:=e] = e$ ,  si $x = i$
+$Id(i)[x:=e] = Id(i)$ , si $x \neq i$
+
+#### Números y Booleanos
+Al no haber variables en este tipo de expresiones, la sustitución no surte efecto alguno.
+
+$Num(n)[x:=e] \; = \; Num(n)$
+$Boolean(b)[x:=e] \; = \; Boolean(b)$
+
+#### Operaciones
+Basta con realizar recursivamente la sustitución en las expresiones respectivas.
+
+$Add(i,d)[x:=e] \; = \; Add(i[x:=e], \; d[x:=e])$
+$Not(b)[x:=e] \; = \; Not(b[x:=e])$
+
+#### Let
+Debemos preocuparnos únicamente por sustituir sólo aquellas variables que se encuentren libres.
+Es decir, aquellas que sean distintas al identificador que trae consigo un `let`.
+
+Si el identificador del `let` es igual al identificador de la sustitución, entonces unicamente podemos sustituir el la expresión en el valor y debemos dejar el cuerpo intacto.
+
+$Let(i,v,c)[x:=e] \; = \; Let(i, \; v[x:=e], \; c)$ cuando $x=i$
+
+En cualquier otro caso, si podemos ustituir en el cuerpo sin cambiar el alcance.
+
+$Let(i,v,c)[x:=e] \; = \; Let(i, \; v[x:=e], \; c[x:=e])$ cuando $x \neq i$
+
+## Semántica
+
+Con esto en mente, ya podemos definir las reglas de semántica natural del lenguaje:
+$$
+\begin{prooftree}
+\AxiomC{$v \Rightarrow v_v$}
+\AxiomC{$c[i:=v_{v}] \Rightarrow c_v$}
+\BinaryInfC{$Let(i,v,c) \Rightarrow c_v$}
+\end{prooftree}
+$$
+# Indices de Bruijn
 
 **Nicolas Groveit de Bruijn** propuso una serie de optimizaciones para los sistemas de variables:
-
-### Indices de Bruijn
 
 Lo primero que propone es deshacerse de la variable de ligado, utilizando en su lugar denotaciones por índices (`<0>` para el nivel 0, por ejemplo) de los niveles de un `let`.
 
@@ -38,60 +86,6 @@ Lo que se propone es reducir la notación anterior a la siguiente forma:
 ```
 
 De esta manera, resulta más simple para el intérprete entender la expresión pues los nombres de variable son inútiles para su nivel de abstracción, ya que son únicamente útiles para el programador.
-
-## Modelo computacional
-
-Por ejemplo el **Calculo $\lambda$** y la **Máquina de Turing**:
-
-### Máquinas de Turing
-
-- Cinta con celdas (estados)
-- Cabeza lectora
-- Usa una función de transición: Realiza acciones a partir del estado.
-
-### C
-
-**C** es un lenguaje imperativo basado en el modelo de cómputo de la **Máquina de Turing**.
-
-- **Variables**: Almacenan valores, lo cual representa el estado.
-- **Estructuras de control** 
-
-## Cálculo $\lambda$
-
-El cálculo $\lambda$ es un sistema lógico, y como todo sistema lógico tiene:
-
-- **Sintaxis**
-- **Semántica**
-- **Reglas de inferencia** (Teoría de la prueba)
-
-### Sintaxis
-
-#### - Términos $\lambda$
-
-- Variables
-- Abstracciones $\lambda$ (funciones)
-- Aplicaciones de función
-
-`<Expr>` $:=$ `<Var>`
-		| ($\lambda$ `<Var>` $\cdot$ `<Expr>`)
-		| `(<Expr>)`
-
-##### - Variables
-
-Son identificadores, entonces pueden ser letras, cadenas, etc
-
-##### - Funciones
-
-> $\lambda$ `x` $\cdot$ `x`
-
-Lo que está antes del punto se denomina ==encabezado== y lo que esta despues ==cuerpo==.
-
-##### - Aplicaciones de funciones
-
-> `((`$\lambda$`x`$\cdot$`x) y)`
-
-- Parametros formales: Vendría siendo la función que se va a aplicar
-- Parametros reales: Serían los **argumentos** que se van a aplicar de la función.
 
 # Enlaces
 
