--- a/HFC/WebHacking/apuntes/HFC30_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC30_09_2024.md
@@ -7,19 +7,25 @@ Si los identificadores usados para estas referencias son fácilmente predecibles
 
 ## Protección insuficiente en JWTs
 
-Los *Json Web Tokens* son okens compuestos por 3 secciones:
+Los *Json Web Tokens* son tokens compuestos por 3 secciones codificadas cada una en *base64*:
 
 - **Header**: Indica el algoritmo usado para firmar el token
+
 - **Payload**; Indica los claims y sus valores. Por ejemplo, fecha de expedición, validez, roles del token, etc
+
 - **Signature**: Firma del token, que generalmente requiere de un secreto conocido únicamente por el *backend*.
 
-Estos *tokens* permiten que se envien
+> Estos *tokens* permiten que el cliente envíe (entre otros datos) todo lo referente a sus privilegios en las peticiones.
 
-Algunos problemas pueden ser:
+Debido a que cuentan con una firma para vrificar la integridad del *Token*, en teoría, no se pueden modificar dichos valores.
 
-- Falta de la verificación de la firma
-- Aceptar el algoritmo none
+Algunos problemas con la implementación de  JWTs pueden ser:
+
+- Falta de la verificación de la firma en el backend
+- Aceptar el algoritmo "none", que implica la inexistencia de la firma
 - Firma generada con un secreto débil en el backend
+
+> Cualquiera de estos escenarios, permite la creación de *Tokens* falsos y por lo tanto, de evadir el control de acceso.
 
 # Cross-Site Request Forgery (XSRF/CSRF)
 
@@ -27,19 +33,23 @@ Es posible hacer una petición hacia la aplicación 'A' (víctima) que haya sido
 
 Si el usuario que interactúa con la aplicación 'B' tiene iniciada una sesión en la aplicación 'A', la petición incluira sus respectivas *cookies*.
 
-Por defecto, los navegadores web envían las coockes en cada petición a su respectiva aplicación web.
+Por defecto, los navegadores web envían las *cookies* en cada petición a su respectiva aplicación web.
 
-Se da cuando
+Este tipo de vulnerabilidades se da cuando:
 
 - Se envía la *cookie* de sesión en cada interacción
 - En el servidor, no se verifica si la petición se originó en un sitio diferente
 
-Para explotar este tipo de vulnerabilidades, se requiere:
+Para ==explotar== este tipo de vulnerabilidades, se requiere:
 
 - Almacenar en un sitio controlado por el atacante, el código que detona la petición
-- La victima interactue con la URL del sitio malicioso
+
+- Que la victima interactue con la URL del sitio malicioso
+
 - Que el sitio malicioso detone la petición inmediatamente
+
 - Que la víctima tenga una sesión iniciada en la app vulnerable
+
 - Conocer exactamente los nombres de los recursos y variables con los que se interactúa en la aplicación víctima
 
 ## Protección contra CSRF
@@ -69,17 +79,25 @@ Dependiendo de la aplicación, las interacciones son iniciadas por el servidor *
 Los servidores que alojan aplicaciones *web*, suelen tener más de una interfaz de red:
 
 - Interfaz expuesta a *Internet*
-- Interfaz para comunicarse a redes privadas
+- Interfaz para comunicarse a ==redes privadas==
 
 Es decir, cualquier servidor, está en una posición privilegiada, pues puede interactuar con recursos de la red privada.
 
-Si las *URLs* provistas por los clientes apuntan a recursos internos, los resultados de dichas interaaciones pueden ser usadas para:
+Si las *URLs* provistas por los clientes apuntan a recursos internos, los resultados de dichas interaciones pueden ser usadas para:
 
 - Acceder a recursos internos
 - Escanear los sistemas de las redes privadas
 
 Esto es así porque se aprovecha la posición privilegiada del servidor.
 
+## Protección contra SSRF
+
+- Expresiones regulares para bloquear referencias a recursos internos
+
+- "Procesamiento" de las *URL*s antes de detonar las interacciones
+
+- Segmentación de redes privadas
+
 # Enlaces
 
-[<- Anterior](HFC27_09_2024.md) |
+[<- Anterior](HFC27_09_2024.md) | [Siguiente ->](HFC01_10_2024.md)
