--- a/LenguajesProgramacion/apuntes/LP09_09_2024.md
+++ b/LenguajesProgramacion/apuntes/LP09_09_2024.md
@@ -1,7 +1,7 @@
 [<- Volver](../LenguajesProgramacion.md)
 ### Multiplicación
 
-$\lambda x. \lambda y. \lambda a. \; x(ya)$
+> $\lambda x. \lambda y. \lambda a. \; x(ya)$
 
 ## Álgebra Booleana (Cálculo $\lambda$)
 
@@ -22,7 +22,7 @@ $\lambda x. \lambda y. \lambda a. \; x(ya)$
 
 ## Operaciones variadas
 
-### If0
+### If0 (Z)
 
 Esta operación verifica si un número es igual a 0, se denota como $if0$ o $Z$:
 
@@ -38,8 +38,10 @@ $z$ es `True` o `False`, dependiendo de si requerimos recuperar el primer o segu
 
 Ahora, podemos definir las siguientes expresiones $\lambda$:
 
+**Predecesor**:
 > $p =_{def} \lambda n. \; (n\Phi(\lambda z. \; z00)) F$
 
+con:
 > $\Phi =_{def} \lambda p. \lambda z. \; z(S(pT))(pT)$
 
 ### Miscelaneas
@@ -52,4 +54,4 @@ Ahora, podemos definir las siguientes expresiones $\lambda$:
 
 # Enlaces
 
-[<- Volver](LP06_09_2024.md) |
+[<- Volver](LP06_09_2024.md) | [Siguiente ->](LPNota14.md)
