--- a/LenguajesProgramacion/apuntes/LP05_09_2024.md
+++ b/LenguajesProgramacion/apuntes/LP05_09_2024.md
@@ -1,33 +1,33 @@
 [<- Índice](../LenguajesProgramacion.md)
-# Sintaxis del cálculo $\lambda$
 ## Modelo computacional
 
 Por ejemplo el **Calculo $\lambda$** y la **Máquina de Turing**:
 
 ### Máquinas de Turing
 
-- Cinta con celdas (estados)
-- Cabeza lectora
-- Usa una función de transición: Realiza acciones a partir del estado.
+> Son uno de los modelos más influyentes y fundamentales. Este modelo consiste en una cinta infinita dividida en celdas, un cabezal de lectura y un conjunto finito de estados con reglas que determinan el comportamiento del sistema.
 
 ### C
 
-**C** es un lenguaje imperativo basado en el modelo de cómputo de la **Máquina de Turing**.
+> **C** es un lenguaje imperativo basado en el modelo de cómputo de la **Máquina de Turing**.
 
 - **Variables**: Almacenan valores, lo cual representa el estado.
-- **Estructuras de control** 
+- **Instrucciones secuenciales**: Las instrucciones se ejecutan siguiendo un órden lógico que dependen del estado actual.
+- **Estructuras de control**: Reflejan la capacidad de las máquinas de Turing para cambiar de estado en funciones de la entrada y salida.
 
-## Cálculo $\lambda$
+# Cálculo $\lambda$
 
-El cálculo $\lambda$ es un sistema lógico, y como todo sistema lógico tiene:
+> Es otro modelo de cómputo que se centra en la definición y aplicación de funciones.
+
+A diferencia de las máquinas de Turing, que operan sobre una cinta de datos, el Cálculo $\lambda$ se basa en la idea de aplicar dichas funciones a ==argumentos==.
+
+> A pesar de su simplicidad, el Cálculo $\lambda$ es capaz de expresar cualquier función computable, lo que lo hace equivalente en poder a las Máquinas de Turing.
 
 - **Sintaxis**
 - **Semántica**
 - **Reglas de inferencia** (Teoría de la prueba)
 
-### Sintaxis
-
-#### - Términos $\lambda$
+## Términos $\lambda$
 
 - Variables
 - Abstracciones $\lambda$ (funciones)
@@ -35,26 +35,30 @@ El cálculo $\lambda$ es un sistema lógico, y como todo sistema lógico tiene:
 
 `<Expr>` $:=$ `<Var>`
 		| ($\lambda$ `<Var>` $\cdot$ `<Expr>`)
-		| `(<Expr>)`
+		| `(<Expr>)(<Expr>)`
 
-##### - Variables
+### - Variables
 
 Son identificadores, entonces pueden ser letras, cadenas, etc
 
-##### - Funciones
+### - Abstracciones $\lambda$ (Funciones)
 
 > $\lambda$ `x` $\cdot$ `x`
 
+> Las funciones o abstracciones $\lambda$ representan la definición de las funciones anónimas, esto es, no requieren de un nombre explícitamente para ser definidas o usadas.
+
 Lo que está antes del punto se denomina ==encabezado== y lo que esta despues ==cuerpo==.
 
-##### - Aplicaciones de funciones
+### - Aplicaciones de funciones
 
-> `((`$\lambda$`x`$\cdot$`x) y)`
+> `(`$\lambda$`x`$\cdot$`x)(y)`
 
-- Parametros formales: Vendría siendo la función que se va a aplicar
-- Parametros reales: Serían los **argumentos** que se van a aplicar de la función.
+- Parametros formales: Vendría siendo la variable que se va a sustituir, es decir las variables de ligado.
+- Parametros reales: Serían los **argumentos** que realmente se van a aplicar o sustituir de la función.
 
-### Alcance
+> Representa el proceso de evaluar una función con su respectivo argumento.
+
+## Alcance
 
 > El alcance de todo identificador se da en el cuerpo de las abstracciones.
 
@@ -71,11 +75,22 @@ $$
 (\lambda x. \; x)(\lambda y. \; x)
 $$
 
-### $\alpha$ - equivalencias
+## Currificación
+
+> Entiendase por currificación, el procedimiento de convertir una abstracción $\lambda$ multiparamétrica en una abstracción $\lambda$ equivalente donde todas las abstracciónes $\lambda$ contenidas poseen un solo parámetro.
+
+Por ejemplo:
+
+$$
+\lambda x,y. \; xy \quad \equiv \quad \lambda x. \lambda y . \; xy
+$$
+
+## $\alpha$ - equivalencias
 
 Los nombres de los identificadores *ligados* no son importantes en el contexto del cálculo $\lambda$.
 
 Por ejemplo, $\lambda x. \; x$ y $\lambda y. \; y$ representan la misma función y lo único que cambia es el nombre del identificador.
+
 > A esto se le conoce como relación de $\alpha$-equivalencia
 
 Sin embargo, la regla tiene ciertas restricciones:
