--- a/LenguajesProgramacion/apuntes/LP06_09_2024.md
+++ b/LenguajesProgramacion/apuntes/LP06_09_2024.md
@@ -8,9 +8,9 @@ A la primera parte de la expresión $(\lambda x \; . \; e)$ se le conoce como **
 A $s$ se le conoce como argumento
 Y a $e_{[x:=s]}$ se le conoce como ***Reducto***
 
-Cuando reduces una expresión a una forma en la que no se puede reducir más, se le conoce como **forma normal**.
+Cuando reduces una expresión a una forma en la que no se puede reducir más, se le conoce como ==**forma normal**==.
 
-Sin embargo, no todas las expresiones en el **Calculo $\lambda$** pueden reducirse a una forma normal. A estas expresiones se les llama formas divergentes o formas que divergen.
+Sin embargo, no todas las expresiones en el **Calculo $\lambda$** pueden reducirse a una forma normal. A estas expresiones se les llama formas ==divergentes== o formas que ==divergen==.
 
 Por ejemplo: $(\lambda x \; . \; xx)(\lambda x \; . \; xx)$, pues siempre se evalua a la misma expresión infinitamente.
 
@@ -32,7 +32,8 @@ Con estas últimas propiedades dichas, podemos enunciar los siguientes teoremas:
 > 
 > $e \rightarrow_{b}^{*} \; f$ y $e \rightarrow_{b}^{*} \; f'$ entonces $f = f'$
 
-## Números de Church
+# Representación de datos
+## Numerales de Church
 
 Primero planteemos los números naturales como expresiones $\lambda$ :
 
@@ -45,12 +46,15 @@ $2 := \lambda S \; . \; \lambda z \; . \; S(Sz)$
 $3 := \lambda S \; . \; \lambda z \; . \; S(S(Sz))$
 $...$
 
+## Sucesor
+
 Ahora con una noción de como se representan los números naturales podemos definir la función sucesor:
 
 $S =_{def} \lambda n. \lambda a. \lambda b. \; a(nab)$
 
-### Suma
-$A =_{def} \lambda n. \lambda m. \; nSm$
+## Suma
+
+> $A =_{def} \lambda n. \lambda m. \; nSm$
 
 # Enlaces
 
