Inicio de Reversing

--- a/HFC/WebHacking/apuntes/HFC01_10_2024.md
+++ b/HFC/WebHacking/apuntes/HFC01_10_2024.md
@@ -1,4 +1,4 @@
-[<- Índice](WebHacking.md)
+[<- Índice](../WebHacking.md)
 ## Tarea Anti-SSRF
 
 > **Nota**: Otra manera de burlar las medidas básicas *Anti-SSRF*, era representar la *IP* de una manera distinta a la tradicional (en octetos), ya sea hexadecimalmente, decimalmente, etc.
