--- a/HFC/WebHacking/apuntes/HFC02_10_2024.md
+++ b/HFC/WebHacking/apuntes/HFC02_10_2024.md
@@ -1,4 +1,4 @@
-[<- Índice](WebHacking.md)
+[<- Índice](../WebHacking.md)
 # Carga de archivos
 
 Es común que las aplicaciones *web* permiten la carga de archivos locales. Por ejemplo, para subir imágenes de perfil.
