HFC:Inicio de Análisis de Malware

--- a/HFC/Reversing/apuntes/HFC03_10_2024.md
+++ b/HFC/Reversing/apuntes/HFC03_10_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../Reversing.md)
 # Introducción a Ingeniería Inversa
 
 De los primeros ejemplos de ingeniería inversa, y de los más famosos, es el descifrado del código *Enigma* en la segunda guerra mundial por Alan Turing.
@@ -19,6 +20,8 @@ También  esta el caso de ingeniería inversa de Phoenix a *IBM*.
 - Pruebas de penetración en aplicaciones
 
 > *Context switch*: *Switch* a prueba de interrupciones, utilizado en la arquitectura de una computadora
+
+#### Ejercicio
 
 | Pos | Car |
 | --- | --- |
@@ -54,3 +57,7 @@ También  esta el caso de ingeniería inversa de Phoenix a *IBM*.
 | 29  | a   |
 | 30  | 2   |
 | 31  | 1   |
+
+# Enlaces
+
+[Siguiente ->](HFC04_10_2024.md)
