--- a/HFC/Reversing/apuntes/HFC04_10_2024.md
+++ b/HFC/Reversing/apuntes/HFC04_10_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../Reversing.md)
 # Arquitectura de computadora
 
 ## Componentes
@@ -94,7 +95,6 @@ De no cumplirse esta comparación, no puede se ejecuta el salto condicional de i
 #### Solución
 
 Después de un poco de tanteo con los *breakpoints* de la herramienta, descubrí una especie de ciclo que podiamos aprovechar entre las lineas:
-##### -  `0x400653`
 ##### - `0x400668`
 
 > Recalco que creo bastante posible encontrar unas mejores cotas que estas que propongo
@@ -108,3 +108,7 @@ Por ejemplo, en la primera "iteración" al revisar los registros se esperaba un 
 De esta manera, ahora pasaba la primera "iteración" sin problemas, pero no pasaba la segunda comparación donde `rdx` almacenaba otro nuevo caracter.
 
 > Repitiendo este proceso descubri que la contraseña esperada era `Hol` seguido de un caracter ilegible, quedando algo asi como `Hol `
+
+# Enlaces
+
+[<- Anterior](HFC03_10_2024.md) | [Siguiente ->](HFC09_10_2024.md)
