Deteccion de Intrusos 23-10.2024

--- a/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
@@ -9,20 +9,6 @@
 	- Escenarios de evaluación
 - **Detección de intrusos en dispositivos finales (endpoint)**
 
-## Antes de empezar
-
-#### ¿Cuál es el estado actual?
-
-> Analizar el panorma actual de amenazas
-
-#### ¿Qué se esta haciendo bien?
-
-#### ¿Qué se esta haciendo mal?
-
-#### ¿Qué se tiene?
-
-#### ¿Qué se desea?
-
 ## Nueva postura de seguridad
 
 1. **Primer objetivo**. Detectar la actividad del adversario hacia su objetivo
@@ -126,3 +112,17 @@ El objetivo del *análisis de visibilidad* es determinar las fuentes de recolecc
 1. Artefacto (*URL*, *Nombre de archivo*, *Extensión de un archivo*, *Hash de un archivo*)
 2. Producción (Mecanismo de defensa que produce o genera el artefacto)
 3. Regla de detección/prevención
+
+# Herramientas de Defensa
+
+Aqui anotaré algunas definiciones sobre herramientas utilizadas en el ámbito de ciberseguridad enfocada en defensa que estaremos utilizando a lo largo de este curso.
+
+***SIEMS***: (*Security Information and Event Management*) el objetivo principal de un *SIEM* es ==centralizar la recopilación, almacenamiento y análisis de logs o registros de eventos de seguridad== generados por diversos sistemas, dispositivos y aplicaciones de una organización
+
+El objetivo principal es ==detectar comportamientos sospechosos o maliciosos en tiempo real==.
+
+***IDS***: (*Intrusion Detection System*) Su objetivo es ==monitorear el tráfico de red o las actividades de un sistema para detectar comportamientos sospechosos== o conocidos como maliciosos
+
+SImplemente ==detecta== las actividades sospechosas pero no las bloquea
+
+***IPS***: (*Intrusion Prevention System*) Similar a un **IDS**, pero además de detectar, ==puede bloquear o prevenir las amenazas en tiempo real==.
