Deteccion de Intrusos apuntes organizados

--- a/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
@@ -113,7 +113,7 @@ El objetivo del *análisis de visibilidad* es determinar las fuentes de recolecc
 2. Producción (Mecanismo de defensa que produce o genera el artefacto)
 3. Regla de detección/prevención
 
-# Herramientas de Defensa
+# Siglas de Conceptos de Defensa
 
 Aqui anotaré algunas definiciones sobre herramientas utilizadas en el ámbito de ciberseguridad enfocada en defensa que estaremos utilizando a lo largo de este curso.
 
@@ -126,3 +126,7 @@ El objetivo principal es ==detectar comportamientos sospechosos o maliciosos en 
 SImplemente ==detecta== las actividades sospechosas pero no las bloquea
 
 ***IPS***: (*Intrusion Prevention System*) Similar a un **IDS**, pero además de detectar, ==puede bloquear o prevenir las amenazas en tiempo real==.
+
+# Enlaces
+
+[Siguiente ->](HFC23_10_2024.md)
