--- a/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
@@ -1,18 +1,17 @@
 [<- Índice](../DeteccionIntrusos.md)
+# Flujos (*Netflows*)
 
-## Router
+> Un **flujo de datos** se refiere a el movimiento o transferencia continua de paquetes de datos que viajan dentro de una red desde un punto hasta otro.
 
-- Borde típico del perimetro tradicional
-- Borde principal del control organizacional
-- Primera oportunidad para filtrar el tráfico entrante
-	- El enfoque del filtrado debe ser la simple prevención de tráfico entrante (*Solo filtros sencillos*)
-- Última oportunidad para filtrar el tráfico saliente
+A menudo también comprende el proceso en que los datos son generados, transportados, procesados y almacenados a lo largo de las capas de un modelo de red (*TCP/IP*).
 
-- Información basada en sesiones
-- Puede producir **flujos** de red (*NetFlow*, *Jflow*, *Netstream*)
-- *NetFlow* puede ser algo pesado para dispositivos antiguos por lo que se utiliza *sFlow*.
+> Particularmente **NetFlow** es un protocolo desarrollado por *Cisco* para facilitar la recopilación, análisis y monitoreo del tráfico de red.
 
-## Flujos (*Netflows*)
+Se caracteriza por capturar y registrar información destacada de los paquetes de forma detallada, facilitando el análisis del comportamiento del tráfico de red.
+
+> **NetFlow** sentó la base para los protocolos de flujo más actuales y avanzados.
+
+Contiene datos como:
 
 - *Timestamp*, inicio y fin
 - IP origen
@@ -22,45 +21,98 @@
 - Banderas tcp
 - Bytes transferidos
 
+A pesar de que ==*NetFlow* es el protocolo estándar para empaquetar flujos de datos==, puede ser algo pesado para dispositivos antiguos por lo que se utiliza *sFlow* en estos casos.
+
 ## IPFIX/Netflow
 
-### Detecciones clave
+> *IPFIX* (*Internet Protocol Flow Information Export*) es un estándar avanzado desarrollado para la exportación de información sobre los flujos de tráfico de redes.
 
+Este protocolo fue creado como ==evolución del protocolo *NetFlow*== de *Cisco* para ofrecer una solución más abierta y extensible que pudiera ser utilizada por cualquier fabricante de equipos de red.
+
+A diferencia de *NetFlow*, ==*IPFIX* es más flexible== debido a su estructura de plantillas, lo cual permite que los exportadores de flujo definan y usen diferentes tipos de plantillas de datos, ==facilitando la adaptación a nuevas necesidades o tecnologías==.
+
+## ¿Y en que nos sirven los flujos de datos?
+
+Los flujos de datos permiten tanto la ==detección== como la ==prevención== de compromisos a una red, dado que podemos notar varias "anomalías" o conductas sospechosas en la información que nos proporcionan, por ejemplo:
+
+### Detecciones clave
 - Flujos de salida "anormales"
 - Conexiones de salida persistentes
-- Destino del tráfico de salida
-- Volumen de tráfico de salida
+- Destino del tráfico de salida (==Destino sospechoso o de baja reputación==)
+- Volumen de tráfico de salida (==Volúmenes sospechosamente grandes==)
 
 ### Prevenciones clave
-
 - Tráfico falsificado/ IPs falsas
 - Filtrado basado en reputación
 
-## Ejemplo SQL Injection - Router
+# Dispositivos de Red
 
-### Detección
+A continuación detallaré los dispositivos de red más destacados que nos aportan valiosas características de defensa en el ámbito de la ciberseguridad
 
-**Detección de ataques**: FALLA pues todo parece tráfico legítimo para el servidor
-**Detección de exfiltración**: Posible éxito. El comportamiento tendría que activar detectores personalizados de anomalías debido al volumen/destino.
+- *Routers*
+- *Perimeter SI Firewall*
+- *Web Application Firewall*
+- Encriptación e inspección *TLS*
+- *Proxy*
+- *NIPS/NIDS*
+- *Next Generation Firewall*
+- *Malware Detonation Device*
+- *Switches (VLAN)*
+- *DNS*
 
-### Prevención
+## Router
 
-**Prevención de ataque**: FALLA, sin visibilidad en capa 7
-**Prevención de comando y control**: Si el *Comando y Control* no es un servicio permitido o esta bloqueado
-**Prevención de pivoting** FALLA, sin visibilidad interna
-**Prevención de exfiltración**: ÉXITO, si la ruta de exfiltración elegida no es un servicio permitido (o está bloqueado)
+> Borde típico del perimetro tradicional
 
-## Ejemplo Watering Hole - Router
+ > Borde principal del control organizacional
 
-Detección de ataques: FALLA, sin visibilidad en capa 7
-Detección de Comando y control: Éxito si el servicio utilizado no es de confianza o si el destino activa alertas de reputación
+- ==Primera oportunidad para filtrar el tráfico entrante==
+	- El enfoque del filtrado debe ser la simple prevención de tráfico entrante (*Solo filtros sencillos*)
+- ==Última oportunidad para filtrar el tráfico saliente==
 
-Detección de Pivoting: Sin visibilidad interna
-Detección de exfiltracion: Si el servicio no es de confianza o si el destino activa alertas de reputación.
+- Información basada en ==sesiones==
+- Puede producir ==**flujos** de red== (*NetFlow*, *Jflow*, *Netstream*)
 
-## Firewall de Estado (SI)
+Ahora que sabemos las principales características de un *Router*, proporcionemos un ejemplo de un pequeño análisis de visibilidad a ellos para el caso específico de un **Ataque de Inyección SQL**.
 
-El *Firewall* intenta entender si un paquete en inspección está directamente relacionado con el tráfico anterior
+---
+#### Ejemplo SQL Injection - Router
+
+##### ==Detección==
+
+**Detección de ataques**: ***FALLA*** pues todo parece tráfico legítimo para el servidor
+
+**Detección de exfiltración**: ***Posible éxito***. El comportamiento tendría que activar detectores personalizados de anomalías debido al volumen/destino.
+
+##### ==Prevención==
+
+**Prevención de ataque**: ***FALLA***, sin visibilidad en capa 7
+
+**Prevención de comando y control**: ***Posible éxito***: Si el *Comando y Control* no es un servicio permitido o esta bloqueado
+
+**Prevención de pivoting**: ***FALLA***, sin visibilidad interna a la red
+
+**Prevención de exfiltración**: ***ÉXITO***, si la ruta de exfiltración elegida no es un servicio permitido (o está bloqueado)
+
+---
+#### Ejemplo Watering Hole - Router
+
+##### Detección
+
+**Detección de ataques**: ***FALLA***, sin visibilidad en capa 7
+
+**Detección de Comando y control**: ***Éxito*** si el servicio utilizado no es de confianza o si el destino activa alertas de reputación
+
+**Detección de Pivoting**: ***FALLA***, sin visibilidad interna
+**Detección de exfiltracion**: ***Éxito***, si el servicio no es de confianza o si el destino activa alertas de reputación.
+
+## Perimeter Security Information Firewall
+
+> Comúnmente llamado **Firewall Perimetral**, es un dispositivo diseñado para supervisar, controlar y filtrar el tráfico entrante y saliente basado en políticas de seguridad predefinidas.
+
+La mayoría de los *Firewall* Perimetrales modernos utilizan inspección de estado, lo que significa que rastrean el estado de las conexiones activas para permitir solo respuestas legítimas (por asi decir, "coherentes").
+
+> Es decir, el *Firewall* Perimetral intenta entender si un paquete en inspección está directamente relacionado con el tráfico anterior
 
 Para algunos protocolos, esto es bastante simple y directo en circunstancias normales
 
@@ -69,15 +121,33 @@ Para algunos protocolos, esto es bastante simple y directo en circunstancias nor
 
 ## Web Application Firewall (WAF)
 
-## Modos de interfaz de red
+> Es un tipo de *Firewall* especializado y diseñado para proteger aplicaciones *Web* al filtrar, monitorear y bloquear tráfico *HTTP/HTTPS* malicioso entre usuarios de Internet.
 
-#### Modo normal
-#### Modo promiscuo/monitor
+Cabe recalcar que un *WAF* requiere de mucho mantenimiento y conocimiento para aprovechar todo su potencial, no basta con instalarlo y esperar que se deshaga de todo el mal inmediatamente.
 
-## Herramietnas para captura y análisis de tráfico de red
+> A diferencia de un *Firewall* tradicional, un *WAF* se enfoca en proteger específicamente aplicaciones web de ataques comunes que explotan vulnerabilidades en la ==capa de aplicación==.
+
+==Se destacan especialmente por su capacidad de realizar **Patching Virtual**==, una técnica que permite proteger sistemas sin tener que modificar el código subyacente de inmediato.
+
+El **Patching Virtual** por supuesto es una manera rápida y fácil de solucionar problemas que requieren de nuestra atención inmediata, sin embargo no debe considerarse una definición definitiva o a largo plazo.
+
+---
+## Interfaz de red
+#### Modos de interfaz de red
+
+**Modo normal**: Captura únicamente los paquetes que tengan como destino a si misma.
+
+**Modo promiscuo/monitor**: Captura todos los paquetes que pueda
+
+---
+## Herramientas para captura y análisis de tráfico de red
 
 - *TCPDump*
 - *WinDump*
 - *WireShark*
 - *Kismet*
 - *Snort*
+
+# Enlaces
+
+[<- Anterior](HFC22_10_2024.md) |
