--- a/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC23_10_2024.md
@@ -150,4 +150,4 @@ El **Patching Virtual** por supuesto es una manera rápida y fácil de soluciona
 
 # Enlaces
 
-[<- Anterior](HFC22_10_2024.md) |
+[<- Anterior](HFC22_10_2024.md) | [Siguiente ->](HFC24_10_2024.md)
