--- a/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
@@ -1,4 +1,7 @@
-## Hallazgos del análisis
+[<- Índice](../DeteccionIntrusos.md)
+## Ejercicio 2 - Análisis de contenido completo
+
+#### Hallazgos del análisis
 
 - En la red se utiliza mucho *UDP*
 - Una comunicación de 10.42.0.8 a 52..2.229.189 con muchos bytes transferidos (222 kb)
@@ -7,10 +10,13 @@
 
 ## IDS
 
-De acuerdo a las técnicas de análisis de datos se pueden clasificar como:
+> Es una ==herramienta de seguridad que monitorea el tráfico de red y/o los eventos de un sistema para identificar actividades sospechosas== o posibles ataques mediante la ==definición de reglas==.
 
+De acuerdo a las técnicas de análisis de datos se pueden clasificar como:
 - Basado en Anomalías (*Whitelist*)
 - Basado en patrones (*Blacklist*)
+
+### Detección basada en anomalías
 
 > Consiste en el análisis de tráfico de red para reportar comportamiento anómalo o inusual respecto a los patrones de tráfico normal para una red.
 
@@ -32,7 +38,7 @@ Requiere de una base inicial de comportamiento
 
 El propósito es analizar, entender y caracterizar el comportamiento del tráfico de red, permitiendo el tráfico que no sea considerado anómalo
 
-#### Detección basadas en firmas
+### Detección basadas en firmas
 
 - Consiste en la creación de patrones específicos de tráfico anómalo o malicioso previamente conocido
 - La detección se realiza cuando el tráfico analizado coincide con algún patron previamente creado
@@ -44,16 +50,21 @@ El propósito es analizar, entender y caracterizar el comportamiento del tráfic
 - ==Snort==, Suricata
 - Marcas como *SourceFire*, *Tipping Point*, *Palo Alto Network*
 
-## Reglas de Snort
+## NIDS
 
-Las reglas definen lo que *Snort* debe buscar en los paquetes de red
+> Un *NIDS* es un *IDS* enfocado principalmente para el monitoreo y seguridad de una red, suele colocarse en puntos estratégicos de la red que faciliten su defensa.
 
-Definen quién y qué constituye un ataque o actividad sospechosa
+En este curso nos enfocamos principalmente en ***Snort*** como *NIDS* y como definir reglas en este.
 
-Inspeccionan cabeceras y datos.
+### Reglas de Snort
+
+> Las reglas definen lo que *Snort* debe buscar en los paquetes de red y como debe actuar al encontrarlo
+
+Alternativamente, definen quién y qué constituye un ataque o actividad sospechosa para nuestra red.
+
+==Inspeccionan cabeceras y datos==.
 
 Las reglas se dividen en 2 secciones:
-
 - **Cabecera de la regla**
 - **Opciones de la regla**
 
@@ -61,18 +72,22 @@ Cada una utiliza una sintaxis diferente
 
 La **cabecera** de la regla es totalmente **obligatoria**.
 
-Existen ciertas opciones **obligatorias** para el correcto funcionamiento de la regla, sin embargo, en teoría deben ser opcionales.
+Existen ciertas opciones **obligatorias** para el correcto funcionamiento de la regla, sin embargo idealmente son, redundantemente, opcionales.
 
-```
+```snort
 alert tcp $EXTERNAL_NET any -> $HOME_NET any / (msg:"mensaje"; / content:"GET" / ..)
 ```
 
-- Cabecera
-	- Acción de la regla
-	- Protocolo
-	- Dirección IP origen
-	- Puerto origen
-	- Dirección IP destino
-	- Puerto destino
+La **cabecera** esta principalmente constituida por:
 
-### NIDS
+1. Acción de la regla
+2. Protocolo
+3. Dirección IP origen
+4. Puerto origen
+5. `->`
+6. Dirección IP destino
+7. Puerto destino
+
+# Enlaces
+
+[<- Anterior](HFC23_10_2024.md) |
